<resources>
    <string name="app_name">CATCH THE FRUIT</string>
    <string name="game_over">GAME OVER</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="start">START</string>
    <string name="_30_point">30 point</string>
    <string name="_10_point">10 point</string>
    <string name="_150">150</string>
    <string name="high_score_300">High Score : 300</string>
    <string name="score_0">Score : 0</string>
    <string name="high_score">\"High Score : \"</string>
    <string name="score">\"Score : \"</string>
    <string name="tap_to_start">Tap to Start</string>
</resources>
